prevented editor/debugger toolbar from wrapping
It caused layout problems for CodeMirror.

--- a/style/style.css
+++ b/style/style.css
@@ -44,7 +44,7 @@ body { padding: 0; margin: 0; }
 .ui-layout-resizer { background: #d4d0c8; }
 .ui-layout-toggler { background: #808080; }
 .ui-layout-resizer:hover .ui-layout-toggler { background: #ace; }
-.toolbar { background: #d4d0c8; cursor: default; overflow: hidden; padding: 1px; }
+.toolbar { height: 24px; overflow: hidden; background: #d4d0c8; cursor: default; overflow: hidden; padding: 1px; border-bottom: solid #aaa 1px; }
 .button {
 	float: left;
 	width: 24px;
